assets/css/admin.css
.theme-browser .theme.focus .theme-actions,
.theme-browser .theme:focus .theme-actions,
.theme-browser .theme:hover .theme-actions {
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
    opacity: 1
}
.theme-browser .theme .theme-screenshot:after {
    content: "";
    display: block;
    padding-top: 66.66666%
}

.wrap .demo-type {
    position: absolute;
    z-index: 1;
    color: #fff;
    padding: 0.5em 1em;
    top: -0.5em;
    left: -0.5em;
    text-transform: uppercase;
}
.wrap .demo-type.premium {
    background: #0073aa;
}
.wrap .demo-type.free {
    display: none;
}

.theme {
    position: relative;
}
.wrap .astra-demo-import-preview .demo-type.premium {
    display: block;
    display: none;
    position: relative;
    margin: 0.5em 0em 1em 0em;
    top: 0;
    left: 0;
    text-align: center;
}

.theme-details-read-more.open {
    margin: 0.5em 0 0 0;
}

.astra-demo-import-preview .theme-screenshot {
    width: 100%;
}

/**
 * Required Plugins
 */
.required-plugins .plugin-card {
    float: none;
    width: 100%;
    border: none;
    margin: 0 0 0.8em 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
    transition: background ease 0.8s;
}
.required-plugins .spinner {
    float: none;
}

.required-plugins-wrap h4 {
    margin: 1em 0 0.5em 0;
    padding: 0.5em 0;
}

.expanded .wp-full-overlay-footer {
    height: 100px;
}

.wp-full-overlay-footer .view-site,
.wp-full-overlay-footer .go-pro,
.wp-full-overlay-footer .astra-demo-import {
    width: 100%;
    text-align: center;
}

.wp-full-overlay-footer .installing:before {
    vertical-align: text-bottom;
}

/**
 * Read more link
 */
.wp-core-ui .theme-details-read-more:focus,
.wp-core-ui .theme-details-read-more:hover {
    outline: none;
    box-shadow: none;
}
.wp-core-ui .theme-details-read-more {
    display: none;
}

/*.theme-details {
    height: 57px;
}*/

/**
 * Go pro.
 */
.wp-core-ui .go-pro.button[disabled] {
    background-color: #fcb92c !important;
    color: white !important;
    box-shadow: 1px 0 #eab23a !important;
    text-shadow: 1px 0 #6b4e13 !important;
    border-color: #e2a932 !important;
    cursor: pointer;
}
.wp-core-ui .view-site .dashicons,
.wp-core-ui .go-pro .dashicons {
    font-size: 1rem;
    vertical-align: middle;
}

/**
 * Errors
 */
.plugin-card.plugin-card-update-failed {
    display: block;
}

